--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,20 @@
-<html>
-<h1>this is page-one</h1>
+<!doctype html>
+<head>
+    <title>
+        article-one
+    </title>
+</head>
+<body>
+<div>
+    <a href="/">Home</a>
+</div>
+<hr/>
+<h2>article one of this page</h2>
+<div>
+    <p>
+        this is the content of this web page, whis is my first article
+    </p>
+    
+</div>
+</body>
 </html>
