--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
     <title>
         article-one
     </title>
+    <meta name=viewport content="width=device-width, initial-scale=1"/>
 </head>
 <body>
 <div>
@@ -14,7 +15,6 @@
     <p>
         this is the content of this web page, whis is my first article
     </p>
-    
 </div>
 </body>
 </html>
