[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,17 +4,33 @@
         article-one
     </title>
     <meta name=viewport content="width=device-width, initial-scale=1"/>
+    <style>
+       .container{
+           max-width: 800px;
+           margin:0 auto;
+            color: grey;
+            font-family:sans-serif;
+           
+       } 
+    </style>
 </head>
+
+
 <body>
-<div>
-    <a href="/">Home</a>
-</div>
-<hr/>
-<h2>article one of this page</h2>
-<div>
-    <p>
-        this is the content of this web page, whis is my first article
-    </p>
-</div>
+    <div class="container">
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h2>
+            article one of this pag
+        </h2>
+        <div>
+            <p>
+                this is the content of this web page, whis is my first article
+            </p>
+        </div>
+    </div>
+        
 </body>
 </html>
