--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,10 +7,12 @@
     <style>
        .container{
            max-width: 800px;
-           margin:0 auto;
-            color: grey;
-            font-family:sans-serif;
-           
+            margin: 0 auto;
+            color: #694646;
+            font-family: sans-serif;
+            padding-top: 30px;
+            padding-left: 20px;
+            padding-right: 20px;
        } 
     </style>
 </head>
