--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,17 +4,7 @@
         article-one
     </title>
     <meta name=viewport content="width=device-width, initial-scale=1"/>
-    <style>
-       .container{
-           max-width: 800px;
-            margin: 0 auto;
-            color: #694646;
-            font-family: sans-serif;
-            padding-top: 30px;
-            padding-left: 20px;
-            padding-right: 20px;
-       } 
-    </style>
+    <link href="/ui/style.css" rel="stylesheet" />
 </head>
 
 
