[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,17 +4,22 @@
         article-two
     </title>
     <meta name=viewport content="width=device-width, initial-scale=1"/>
+    <link href="/ui/style.css" rel="stylesheet" />
 </head>
+
 <body>
-<div>
-    <a href="/">Home</a>
-</div>
-<hr/>
-<h2>article two of this web page</h2>
-<div>
-    <p>
-        this is the content of this web page, whis is my second article
-    </p>
-</div>
+    <div class="container">
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h2>article two of this web page</h2>
+        <div>
+            <p>
+                this is the content of this web page, whis is my second article
+            </p>
+        </div>
+    </div>
+        
 </body>
 </html>
