--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,17 +4,20 @@
         article-three
     </title>
     <meta name=viewport content="width=device-width, initial-scale=1"/>
+    <link href="/ui/style.css" rel="stylesheet" />
 </head>
 <body>
-<div>
-    <a href="/">Home</a>
-</div>
-<hr/>
-<h2>article one of this page</h2>
-<div>
-    <p>
-        this is the content of this web page, whis is my third article
-    </p>
+<div class="container">
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h2>article one of this page</h2>
+        <div>
+            <p>
+                this is the content of this web page, whis is my third article
+            </p>
+        </div>
 </div>
 </body>
 </html>
