[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -15,7 +15,7 @@
         </div>
         <hr/>
         <h2>
-            article one of this pag
+            article one
         </h2>
         <div>
             <p>
