--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am aritra bhawani.
         </div>
+        <script>
+            alert('hi! am aritra & this is my website')
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
