[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am aritra bhawani.
-        </div>
+    <div class="container">
+            <div class="center">
+                <img id='madi' src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAd3AAAAJGZhYjhiZWI1LTM0YzYtNDE5ZC1hZjE2LWJlMTIzMzczNDFmMg.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h2>PERSONAL</h2>
+            <div>
+                hi! this is Aritra Bhawani
+            </div>
+
+            <h2>Professional</h2>
+            <div>
+                i study at SRM University
+            </div>
+            <hr/>
+            <div class="footer"></div>
+    </div>
         <script>
             alert('hi! am aritra & this is my website')
         </script>
