--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
                 i study at SRM University
             </div>
             <hr/>
-            <div class="footer"></div>
+            <div class="footer">this button<button id="counter">click me!!</button>has been clicked<span id="counter">0<</span>times</div>
     </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
